--- a/ScrollingNavbarDemo/ScrollingNavbarDemo/en.lproj/Main.storyboard
+++ b/ScrollingNavbarDemo/ScrollingNavbarDemo/en.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="bcL-UJ-dqI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="bcL-UJ-dqI">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -227,6 +227,8 @@
                     <connections>
                         <outlet property="searchDisplayController" destination="m7j-jZ-2gA" id="tmB-pt-fEM"/>
                         <outlet property="tableView" destination="5DA-Q0-AzK" id="PoD-2E-sgm"/>
+                        <outlet property="toolBarConstraint" destination="97y-9Z-RCa" id="hnb-ki-ujc"/>
+                        <outlet property="toolbar" destination="dgt-VC-hLP" id="kr4-0z-4hq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="396-ZY-MnZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
